--- a/src/main/resources/styles/modules/_table.scss
+++ b/src/main/resources/styles/modules/_table.scss
@@ -19,4 +19,8 @@ tr:nth-child(2n) td {
 td {
   border-top: 1px solid #ddd;
   padding: 0.2em 1ch;
+
+  .adaptable {
+    word-break: break-word;
+  }
 }
